# incident-triage-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
airflow/artifacts/: INC-123.json  INC-555.json
airflow/dags/: incident_evidence_dag.py  incident_evidence_v1.py
k8s/: airflow-creds.yaml  deployment.yaml  service.yaml
runbooks/: 5xx-spike-checklist.md  db-timeouts-mitigation.md
src/incident_triage_mcp/: audit.py  config.py  domain_models.py  server.py
src/incident_triage_mcp/adapters/: airflow_api.py  artifacts_s3.py  contracts.py  datadog_mock.py  runbooks_local.py
src/incident_triage_mcp/tools/: evidence.py  incidents.py  jira_draft.py  runbooks.py  triage.py  waiter.py
